--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,63 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #fff;
+	--secondary: #fbf4ea;
+	--foreground: #171717;
+	--accent: #222c17;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+	--color-background: var(--background);
+	--color-secondary: var(--secondary);
+	--color-foreground: var(--foreground);
+	--color-accent: var(--accent);
+	--font-sans: var(--font-geist-sans);
+	--font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: #fff;
+		--secondary: #fbf4ea;
+		--foreground: #171717;
+		--accent: #222c17;
+	}
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+	background: var(--background);
+	color: var(--foreground);
+	font-family: Newsreader, Helvetica, sans-serif;
+}
+
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+main {
+	flex: 1;
+	@apply text-lg;
+}
+
+footer {
+	box-shadow: 0 0 10px var(--foreground);
+}
+
+h1 {
+	@apply text-9xl;
+}
+
+h2 {
+	@apply text-3xl font-medium mt-10 mb-4 uppercase;
+}
+
+h3 {
+	@apply uppercase;
+}
+
+h4 {
+	@apply uppercase;
 }
